cmake_minimum_required(VERSION 2.8)
project( DRC_NANO )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
add_executable( DRC_NANO src/Main.cpp )
target_compile_features(DRC_NANO PRIVATE cxx_range_for)
target_link_libraries( DRC_NANO ${OpenCV_LIBS} )